# karaoke-shared

./: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
karaoke_shared/: __init__.py  pipeline_utils.py
tests/: test_pipeline_utils.py
