[metadata]
name = karaoke-shared
version = 1.0.0
author = Stephen Vidal
author_email = vidalstephen@gmail.com
description = Shared utilities for karaoke pipeline microservices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/svidal-nlive/karaoke-shared
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    redis==6.1.0
    requests==2.32.3

[options.package_data]
karaoke_shared = py.typed

[flake8]
max-line-length = 150

[tool:pytest]
testpaths = tests
